Add files and pre-work to use the pipeline state. The files were not saved as UTF-8, which caused an issue, and it fixed when adding editorconfig that set text files of the project to UTF-8 no BOM. To use the pipeline state object, the class of pipeline state is modified to manage states, and the render pass class is added.

--- a/DX12Project/DX12Project.vcxproj.filters
+++ b/DX12Project/DX12Project.vcxproj.filters
@@ -168,6 +168,7 @@
     <ClCompile Include="Source\D3D12\D3D12CommandExecutor.cpp">
       <Filter>D3D12\Private</Filter>
     </ClCompile>
+    <ClCompile Include="RenderPass.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\D3D12\D3DUtil.h">
@@ -296,5 +297,9 @@
     <ClInclude Include="Source\D3D12\D3D12Types.h">
       <Filter>D3D12\Public</Filter>
     </ClInclude>
+    <ClInclude Include="RenderPass.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\.editorconfig" />
   </ItemGroup>
 </Project>
