Working on TaskGraph system TaskGraph to manage a dependency between tasks is added on this commit. It will be used at RenderPass graph and every task system that is allocated on and worked to a thread.

--- a/DX12Project/DX12Project.vcxproj
+++ b/DX12Project/DX12Project.vcxproj
@@ -35,10 +35,10 @@
     <ClCompile Include="Source\D3D12\DDSTextureLoader.cpp" />
     <ClCompile Include="Source\D3D12\FrameResource.cpp" />
     <ClCompile Include="Source\Engine\Application.cpp" />
+    <ClCompile Include="Source\Engine\Core\TaskGraph.cpp" />
     <ClCompile Include="Source\Engine\Core\WindowsThread.cpp" />
     <ClCompile Include="Source\Engine\Events\InputManager.cpp" />
     <ClCompile Include="Source\Engine\Object\Class.cpp" />
-    <ClCompile Include="Source\Engine\Object\Commands\ObjectCommand.cpp" />
     <ClCompile Include="Source\Engine\Object\Components\Component.cpp" />
     <ClCompile Include="Source\Engine\Object\Components\PrimitiveComponent.cpp" />
     <ClCompile Include="Source\Engine\Object\Components\RenderComponent.cpp" />
@@ -88,7 +88,6 @@
     <ClInclude Include="Source\Engine\Core\WindowsThread.h" />
     <ClInclude Include="Source\Engine\Events\InputManager.h" />
     <ClInclude Include="Source\Engine\Object\Class.h" />
-    <ClInclude Include="Source\Engine\Object\Commands\ObjectCommand.h" />
     <ClInclude Include="Source\Engine\Object\Components\Component.h" />
     <ClInclude Include="Source\Engine\Object\Components\PrimitiveComponent.h" />
     <ClInclude Include="Source\Engine\Object\Components\RenderComponent.h" />
